--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <p>That's life</p>
     <p>That's what all people says</p>
+    <video>video</video>
 </body>
 
 </html>
