--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-    <p>That's life</p>
-    <p>That's what all people says</p>
-    <video>video</video>
+    <div class="container1">
+        <p>That's life</p>
+        <p>That's what all people says</p>
+    </div>
 </body>
 
 </html>
