--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
-    <p>That's life</p>
-    <p>That's what all people says</p>
+    <div>
+
+        <p>That's life</p>
+        <p>That's what all people says</p>
+        <input type="button" class="buttone" name="InBtn" value="Press me">
+    </div>
 </body>
 
 </html>
