--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
         <p>That's life</p>
         <p>That's what all people says</p>
-        <input type="button" class="buttone" name="InBtn" value="Press me">
+        <input type="button" class="buttone" name="InBtn" value="Press me" function="changeText">
     </div>
+
+    
 </body>
 
 </html>
