--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <script>
     function changeText(){
-        document.getElementById("bgImg").src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOw5cY9YYuPS21hzc8kxl4uEpvmDEXvn-1vQ5StQtIgbEujGngm-BwY46oILt129nXsuQ&usqp=CAU"
+        document.body.style.backgroundImage=("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOw5cY9YYuPS21hzc8kxl4uEpvmDEXvn-1vQ5StQtIgbEujGngm-BwY46oILt129nXsuQ&usqp=CAU");
     }
 </script>
     <div>
