--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script>
         function changeText(){
-            document.body.style.backgroundImage=("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOw5cY9YYuPS21hzc8kxl4uEpvmDEXvn-1vQ5StQtIgbEujGngm-BwY46oILt129nXsuQ&usqp=CAU");
+            document.body.style.backgroundImage=url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSP1OescbkjGl0GtP3ImJdCBcHKyKdBDApOTU1kthuLy4MMKoBRZy7zE927e4wZxai3bn8&usqp=CAU");
         }
     </script>
 </head>
