--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <p>That's life</p>
         <p>That's what all people says</p>
-        <input type="button" id="bgImg" class="buttone" name="InBtn" value="Press me" onclick="changeText()" >
+        <button onclick="changeText()">Change me</button>
     </div>
 
 
