--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Not a document</title>
     <link rel="stylesheet" href="style.css">
 
     <script>
@@ -18,9 +18,6 @@
 <body>
 
     <div>
-
-        <p>That's life</p>
-        <p>That's what all people says</p>
         <button onclick="changeText()">Change me</button>
     </div>
 
