--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script>
         function changeText(){
-            document.body.style.backgroundImage=url("https://thumbs.dreamstime.com/z/pino-31293091.jpg");
+            document.body.style.backgroundImage="url('https://thumbs.dreamstime.com/z/pino-31293091.jpg')";
         }
     </script>
 </head>
