--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Not a document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="script" href="script.js">
 
-    <script>
-        function changeText(){
-            document.body.style.backgroundImage="url('https://thumbs.dreamstime.com/z/pino-31293091.jpg')";
-        }
-    </script>
 </head>
 
 <body>
