Added new script to change the backgroun image, with different size.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <div>
         <button onclick="changeText()">Change me</button>
+        <button onclick="changeTextAgain()">Change me again</button>
     </div>
 
 
