--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
 
     <div>
-        <button onclick="changeText()">Change me</button>
-        <button onclick="changeTextAgain()">Change me again</button>
+        <button onclick="changeText()"><p>Change me</p></button>
+        <button onclick="changeTextAgain()"><p>Change me again</p></button>
     </div>
 
 
