Added new page and css to test Swing (not working yet).

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,8 +17,13 @@
         <label for="password">Password</label>
         <input type="password" id="pword" name ="password">
         
-        <buttom type="submit" class="sbmt" name = "SbmtBtn" id="IDsbmtbtn" >Send it</buttom>
+        <button type="submit" class="sbmt" name = "SbmtBtn" id="IDsbmtbtn" >Send it</buttom>
     </form>
+    </section>
+    <section>
+        <div class = "secondSct">
+           <a href="anthpage.html"><p>An other page</p></a> 
+        </div>
     </section>
 </body>
 </html>
