Moved again diretory to match index.html path.

--- a/this is it/index.html
+++ b/this is it/index.html
@@ -22,7 +22,7 @@
     </section>
     <section>
         <div class = "secondSct">
-           <a href="anthpage.html"><p>An other page</p></a> 
+           <a href="\pages\anthpage.html"><p>An other page</p></a> 
         </div>
     </section>
 </body>
