--- a/this is it/pages/anthpage.html
+++ b/this is it/pages/anthpage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet/text" href="\StyleS\style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="this is it\StyleS\style.css">
+    <title>AnthPage</title>
 </head>
 <body>
     <p>That's life, that's what all people says</p>
