--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <section>
         <div class = "secondSct">
-           <a href="\pages\anthpage.html"><p>An other page</p></a> 
+           <a href="this is it\pages\anthpage.html"><p>An other page</p></a> 
         </div>
     </section>
 </body>
