Prolly fixed path error.

--- a/pages/anthpage.html
+++ b/pages/anthpage.html
@@ -7,6 +7,6 @@
     <title>AnthPage</title>
 </head>
 <body>
-    <p>That's life, that's what all people says</p>
+    <p>That's life, that's what all people says.</p>
 </body>
 </html>
