--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>That's index</title>
-    <link rel="stylesheet" href="\this is it\StyleS\style.css">
-    <link rel="script" href="\script\script.js">
+    <link rel="stylesheet" href="this is it\StyleS\style.css">
+    <link rel="script" href="\this is it\script\script.js">
 </head>
 <body>
     <section class="upper">
