Moved anthpage.html and index.html into same directory.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <section>
         <div class = "secondSct">
-           <a href="pages/anthpage.html"><p>Test</p></a> 
+           <a href="anthpage.html"><p>Test</p></a> 
         </div>
     </section>
 </body>
