--- a/index.html
+++ b/index.html
@@ -6,24 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>That's index</title>
     <link rel="stylesheet" href="this is it\StyleS\style.css">
-    <link rel="script" href="\this is it\script\script.js">
+    <link rel="script" href="this is it\script\script.js">
 </head>
 <body>
     <section class="upper">
-    <form method="get">
+    <form name="formName" method="post">
         <label for="username">Username</label>
         <input type="text" id="Uname" name="username">
         <br>
         <label for="password">Password</label>
         <input type="password" id="pword" name ="password">
         
-        <button type="submit" class="sbmt" name = "SbmtBtn" id="IDsbmtbtn" >Send it</buttom>
+        <button type="submit" class="sbmt" name = "SbmtBtn" id="IDsbmtbtn" ><p>Send it</p></button>
+
     </form>
     </section>
-    <section>
+ <!--   <section>
         <div class = "secondSct">
            <a href="anthpage.html"><p>Test</p></a> 
         </div>
     </section>
+-->
 </body>
 </html>
