Fixed css for section.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
     </form>
     </section>
- <!--   <section>
+   <section>
         <div class = "secondSct">
            <a href="anthpage.html"><p>Test</p></a> 
         </div>
     </section>
--->
+
 </body>
 </html>
